--- a/www/index.html
+++ b/www/index.html
@@ -1,30 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Security-Policy"
-          content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport"
-          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <title>My Awesome Game</title>
-    <script type="text/javascript" src="js/phaser.min.js"></script>
-    <script type="text/javascript" src="js/states/Boot.js"></script>
-    <script type="text/javascript" src="js/states/Preloader.js"></script>
-    <script type="text/javascript" src="js/states/MainMenu.js"></script>
-    <script type="text/javascript" src="js/states/Game.js"></script>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            background-color: black;
-        }
-    </style>
-</head>
-
-<body>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+  <script type="text/javascript" src="bundle.min.js"></script></body>
 </html>
